force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <description>Aplicantes a  posible reclutas</description>
    <label>Applicant</label>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>