force-app/main/default/objects/Applicant__c/fields/Barrio__c.field-meta.xml
<CustomField>
    <fullName>Barrio__c</fullName>
    <label>Barrio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Barrio</valueSetName>
    </valueSet>
</CustomField>