force-app/main/default/objects/Applicant__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Provincia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ciudad de Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Ciudad de Lima</fullName>
            </value>
            <value>
                <fullName>Ciudad de La Paz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>