force-app/main/default/objects/Applicant__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&apos;Ingrese su correo aquí&apos;</defaultValue>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>