force-app/main/default/objects/Applicant__c/fields/Foto__c.field-meta.xml
<CustomField>
    <fullName>Foto__c</fullName>
    <inlineHelpText>Ingrese su foto en algunos de los siguentes formatos JPG o PNG</inlineHelpText>
    <label>Foto</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>