force-app/main/default/objects/Applicant__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aguas Corrientes</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Cochabanba</fullName>
            </value>
            <value>
                <fullName>Concepcion</fullName>
            </value>
            <value>
                <fullName>Cordillera</fullName>
            </value>
            <value>
                <fullName>Cusco</fullName>
            </value>
            <value>
                <fullName>Departamentos de Roncha</fullName>
            </value>
            <value>
                <fullName>Florianopalis</fullName>
            </value>
            <value>
                <fullName>Fortaleza</fullName>
            </value>
            <value>
                <fullName>Ica</fullName>
            </value>
            <value>
                <fullName>Itapua</fullName>
            </value>
            <value>
                <fullName>Jose Pedro Varela</fullName>
            </value>
            <value>
                <fullName>Junin</fullName>
            </value>
            <value>
                <fullName>La Libertad</fullName>
            </value>
            <value>
                <fullName>La Paz</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>Manaos</fullName>
            </value>
            <value>
                <fullName>Mendoza</fullName>
            </value>
            <value>
                <fullName>Minas Gerais</fullName>
            </value>
            <value>
                <fullName>Misiones</fullName>
            </value>
            <value>
                <fullName>Montevideo</fullName>
            </value>
            <value>
                <fullName>Pando</fullName>
            </value>
            <value>
                <fullName>Potosi</fullName>
            </value>
            <value>
                <fullName>Sandi Grande</fullName>
            </value>
            <value>
                <fullName>San Juan</fullName>
            </value>
            <value>
                <fullName>San Luis</fullName>
            </value>
            <value>
                <fullName>San Paulo</fullName>
            </value>
            <value>
                <fullName>San Pedro</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Tarija</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>